# src/routes/users.js
@@ -2,7 +2,7 @@ const router = require('express').Router();
 const auth = require('../middlewares/auth');
 const ctrl = require('../controllers/usersController');
 
-router.get('/me', auth, ctrl.me);
-router.put('/me',auth, ctrl.updateMe);
+router.get('/:id', auth, ctrl.me);
+router.put('/:id',auth, ctrl.updateMe);
 
 module.exports = router;
